Prevent collapsing border by altering absolute property on services checkers

--- a/src/App.css
+++ b/src/App.css
@@ -1053,7 +1053,7 @@ margin: 0 auto;
   
   position: absolute;
   top: 50px;
-  left: 680px;
+  right: 50px;
 
   display: -webkit-box;
 
